force-app/main/default/objects/Course__c/fields/Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Months__c</fullName>
    <label>Duration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>