force-app/main/default/objects/Course__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>