force-app/main/default/objects/Course__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <label>Institute</label>
    <referenceTo>Institute__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>